feat: Implement blog management feature with UI components for creating, editing, and deleting blog posts, along with localization support for English and Vietnamese

--- a/locales/en.json
+++ b/locales/en.json
@@ -6,6 +6,7 @@
     "candidates": "Candidates",
     "pricingPlans": "Pricing Plans",
     "customerSupports": "Customer Supports",
+    "blog": "Blog",
     "phone": "📞 +320 495 250",
     "english": "English",
     "vietnamese": "Vietnamese",
@@ -182,7 +183,37 @@
     "heading": "Blog",
     "intro": "Insights, guides & product updates for job seekers and employers.",
     "placeholder": "Search articles...",
-    "categories": ["All", "Career", "Guides", "Product"]
+    "categories": ["All", "Career", "Guides", "Product"],
+    "searchPlaceholder": "Search...",
+    "searchButton": "Search",
+    "categoriesTitle": "Category",
+    "recentPosts": "Recent Posts",
+    "gallery": "Gallery",
+    "popularTags": "Popular Tags",
+    "readMore": "Read More",
+    "noBlogs": "No blog posts found.",
+    "loading": "Loading blogs...",
+    "error": "Failed to load blogs.",
+    "pagination": {
+      "previous": "Previous",
+      "next": "Next"
+    }
+  },
+  "BlogDetail": {
+    "backToBlogs": "Back to Blogs",
+    "byAuthor": "By",
+    "publishedOn": "Published on",
+    "comments": "Comments",
+    "shareThisPost": "Share This Post:",
+    "relatedBlogs": "Related Blogs",
+    "loading": "Loading blog...",
+    "error": "Failed to load blog.",
+    "notFound": "Blog not found.",
+    "leaveComment": "Leave a Comment",
+    "commentPlaceholder": "Write your comment here...",
+    "submitComment": "Submit Comment",
+    "quote": "Quote",
+    "tags": "Tags"
   },
   "Profile": {
     "title": "My Profile",
@@ -410,6 +441,7 @@
       "jobModeration": "Job Moderation",
       "companies": "Companies",
       "employerCompanyProfile": "Company Profile",
+      "blogManagement": "Blog Management",
       "reports": "Reports",
       "categories": "Categories",
       "payments": "Payments",
@@ -690,6 +722,53 @@
       "maintenancePlaceholder": "We're currently performing maintenance. Please check back soon.",
       "reset": "Reset",
       "saving": "Saving..."
+    },
+    "blogs": {
+      "title": "Blog Management",
+      "description": "Create, edit, and manage blog posts",
+      "searchPlaceholder": "Search blogs...",
+      "allStatus": "All Status",
+      "addBlog": "New Blog",
+      "blogTitle": "Title",
+      "slug": "Slug",
+      "thumbnail": "Thumbnail",
+      "content": "Content",
+      "author": "Author",
+      "status": "Status",
+      "publishedAt": "Published At",
+      "createdAt": "Created At",
+      "updatedAt": "Updated At",
+      "actions": "Actions",
+      "edit": "Edit",
+      "delete": "Delete",
+      "view": "View",
+      "draft": "Draft",
+      "published": "Published",
+      "noBlogsFound": "No blogs found",
+      "loadingBlogs": "Loading blogs...",
+      "errorLoadingBlogs": "Error loading blogs",
+      "deleteBlog": "Delete Blog",
+      "deleteBlogConfirm": "Are you sure you want to delete this blog? This action cannot be undone.",
+      "blogDeletedSuccess": "Blog deleted successfully",
+      "blogDeletedError": "Failed to delete blog",
+      "createBlog": "Create Blog",
+      "editBlog": "Edit Blog",
+      "blogCreatedSuccess": "Blog created successfully",
+      "blogCreatedError": "Failed to create blog",
+      "blogUpdatedSuccess": "Blog updated successfully",
+      "blogUpdatedError": "Failed to update blog",
+      "titlePlaceholder": "Enter blog title",
+      "slugPlaceholder": "enter-blog-slug",
+      "thumbnailPlaceholder": "https://example.com/thumbnail.jpg",
+      "contentPlaceholder": "Write your blog content here...",
+      "seoMetaTitle": "SEO Meta Title",
+      "seoMetaTitlePlaceholder": "SEO title for search engines",
+      "seoMetaDescription": "SEO Meta Description",
+      "seoMetaDescriptionPlaceholder": "SEO description for search engines",
+      "generateSlug": "Generate Slug",
+      "previewBlog": "Preview",
+      "saveDraft": "Save as Draft",
+      "publish": "Publish"
     },
     "common": {
       "save": "Save",
