--- a/locales/vi.json
+++ b/locales/vi.json
@@ -6,6 +6,7 @@
     "candidates": "Ứng viên",
     "pricingPlans": "Bảng giá",
     "customerSupports": "Hỗ trợ khách hàng",
+    "blog": "Bài viết",
     "phone": "📞 +320 495 250",
     "english": "Tiếng Anh",
     "vietnamese": "Tiếng Việt",
@@ -173,6 +174,42 @@
         "role": "Engineer"
       }
     ]
+  },
+  "BlogPage": {
+    "heading": "Bài viết",
+    "intro": "Những bài viết, hướng dẫn và cập nhật sản phẩm cho người tìm việc và nhà tuyển dụng.",
+    "placeholder": "Tìm kiếm bài viết...",
+    "categories": ["Tất cả", "Nghề nghiệp", "Hướng dẫn", "Sản phẩm"],
+    "searchPlaceholder": "Tìm kiếm...",
+    "searchButton": "Tìm kiếm",
+    "categoriesTitle": "Danh mục",
+    "recentPosts": "Bài viết gần đây",
+    "gallery": "Thư viện ảnh",
+    "popularTags": "Thẻ phổ biến",
+    "readMore": "Đọc thêm",
+    "noBlogs": "Không tìm thấy bài viết nào.",
+    "loading": "Đang tải bài viết...",
+    "error": "Không thể tải bài viết.",
+    "pagination": {
+      "previous": "Trước",
+      "next": "Tiếp"
+    }
+  },
+  "BlogDetail": {
+    "backToBlogs": "Quay lại danh sách",
+    "byAuthor": "Bởi",
+    "publishedOn": "Đăng ngày",
+    "comments": "Bình luận",
+    "shareThisPost": "Chia sẻ bài viết:",
+    "relatedBlogs": "Bài viết liên quan",
+    "loading": "Đang tải bài viết...",
+    "error": "Không thể tải bài viết.",
+    "notFound": "Không tìm thấy bài viết.",
+    "leaveComment": "Để lại bình luận",
+    "commentPlaceholder": "Viết bình luận của bạn...",
+    "submitComment": "Gửi bình luận",
+    "quote": "Trích dẫn",
+    "tags": "Thẻ"
   },
   "Profile": {
     "title": "Hồ sơ của tôi",
@@ -400,6 +437,7 @@
       "jobModeration": "Kiểm duyệt việc làm",
       "companies": "Công ty",
       "employerCompanyProfile": "Hồ sơ công ty",
+      "blogManagement": "Quản lý bài viết",
       "reports": "Báo cáo",
       "categories": "Danh mục",
       "payments": "Thanh toán",
@@ -680,6 +718,53 @@
       "maintenancePlaceholder": "Chúng tôi đang thực hiện bảo trì. Vui lòng quay lại sau.",
       "reset": "Đặt lại",
       "saving": "Đang lưu..."
+    },
+    "blogs": {
+      "title": "Quản lý bài viết",
+      "description": "Tạo, chỉnh sửa và quản lý bài viết",
+      "searchPlaceholder": "Tìm kiếm bài viết...",
+      "allStatus": "Tất cả trạng thái",
+      "addBlog": "Tạo bài viết",
+      "blogTitle": "Tiêu đề",
+      "slug": "Slug",
+      "thumbnail": "Ảnh đại diện",
+      "content": "Nội dung",
+      "author": "Tác giả",
+      "status": "Trạng thái",
+      "publishedAt": "Ngày đăng",
+      "createdAt": "Ngày tạo",
+      "updatedAt": "Ngày cập nhật",
+      "actions": "Hành động",
+      "edit": "Sửa",
+      "delete": "Xóa",
+      "view": "Xem",
+      "draft": "Bản nháp",
+      "published": "Đã xuất bản",
+      "noBlogsFound": "Không tìm thấy bài viết",
+      "loadingBlogs": "Đang tải bài viết...",
+      "errorLoadingBlogs": "Lỗi khi tải bài viết",
+      "deleteBlog": "Xóa bài viết",
+      "deleteBlogConfirm": "Bạn có chắc chắn muốn xóa bài viết này? Hành động này không thể hoàn tác.",
+      "blogDeletedSuccess": "Xóa bài viết thành công",
+      "blogDeletedError": "Không thể xóa bài viết",
+      "createBlog": "Tạo bài viết",
+      "editBlog": "Chỉnh sửa bài viết",
+      "blogCreatedSuccess": "Tạo bài viết thành công",
+      "blogCreatedError": "Không thể tạo bài viết",
+      "blogUpdatedSuccess": "Cập nhật bài viết thành công",
+      "blogUpdatedError": "Không thể cập nhật bài viết",
+      "titlePlaceholder": "Nhập tiêu đề bài viết",
+      "slugPlaceholder": "nhap-slug-bai-viet",
+      "thumbnailPlaceholder": "https://example.com/thumbnail.jpg",
+      "contentPlaceholder": "Viết nội dung bài viết...",
+      "seoMetaTitle": "Tiêu đề SEO",
+      "seoMetaTitlePlaceholder": "Tiêu đề SEO cho công cụ tìm kiếm",
+      "seoMetaDescription": "Mô tả SEO",
+      "seoMetaDescriptionPlaceholder": "Mô tả SEO cho công cụ tìm kiếm",
+      "generateSlug": "Tạo Slug",
+      "previewBlog": "Xem trước",
+      "saveDraft": "Lưu nháp",
+      "publish": "Xuất bản"
     },
     "common": {
       "save": "Lưu",
